maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: not found: value estFcaeMur
		if(!estFcaeMur) {
                    ^