maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
var c:Int = 0
while(c != getMondeLargeur) {
	setDirection(Direction.NORTH)
	if(estFaceMur) {
		droite()
		if(!estFcaeMur) {
			avance()
		}		
		gauche()
	}
	avance()
}

while(!estSurBiscuit) {
		gauche()
		while(estFaceMur) {
			droite()
		}
		avance()
	}
	prendBiscuit()
}
